vertical alignment issue solve

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -137,10 +137,10 @@ p, address{
     height: 260px;
 }
 .energy_saving_icon {
-    background-position: 0  41px;
+    background-position: 0 28px;
 }
 .many_options_icon {
-    background-position: -10px -233px;
+    background-position: 0 -233px;
 }
 .footprint_icon {
     background-position: 0 -519px;
@@ -233,15 +233,20 @@ p, address{
     background: rgba(0, 0, 0, 0.90);
     width: 100%;
     height: 100%;
-    display: table;
+    display: inline-block;
     text-align: center;
-    padding: 110px 0px 0 40px;
+    position: relative;
+
 }
 .content {
     display: inline-block;
     text-align: left;
     width: 1200px;
     padding: 0 40px;
+    position: relative;
+    top: 50%;
+    transform: translate(-50%,-50%);
+    left: 50%;
 
 }
 .icon_container, .details {
@@ -293,8 +298,7 @@ address, .footer_logo {
     display:inline-block;
 }
 .footer_logo{
-    float: right;
-    margin-right: 40px;
+    float: right
 }
 
 
@@ -449,18 +453,13 @@ address, .footer_logo {
     .content {
         padding: 0px
     }
-    .mask {
-        padding-top: 40px;
-    }
+
     .benefit article {
         height: 412px!important;
     }
 
     .wrapper, .content {
         width: 100%;
-    }
-    .footer_logo {
-        margin-right: 0px;
     }
 
 
@@ -493,9 +492,6 @@ address, .footer_logo {
         height: 310px;
     }
 
-    .mask {
-        padding-top: 10px;
-    }
     .header_section, .case_section {
         overflow: hidden;
     }
@@ -553,7 +549,6 @@ address, .footer_logo {
     .footer h2 {
         width: 75%;
     }
-
     .address_container {
         width: 100%;
         padding: 0 15px;
